Added ktlint and linted